reference-llvm/tests/should-fail/fail19.mu
// forking nonexistant function

function @entry foo() {
    fork bar;
}
